# moving_average_filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: moving_average_filter.h
src/: moving_average_filter.cpp
